<resources>
    <string name="facebook_app_id">995599163788797</string>
    <string name="app_name">Pointters</string>
    <string name="loading">Loading</string>
    <string name="subscribe_to_news">Subscribe To News</string>
    <string name="log_token">Log Token</string>
    <string name="msg_subscribed">Subscribed to news topic</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="default_notification_channel_name" translatable="true">News</string>
    <string name="msg_subscribe_failed">Failed to subscribe to news topic</string>
    <string name="welcome">Welcome</string>
    <string name="app_intro">Lorem Ipsum is dummy text\nyou\'ll ever need</string>
    <string name="sign_up">Sign Up</string>
    <string name="join_pointters">JOIN POINTERS</string>
    <string name="sign_up_caps">Sign Up</string>
    <string name="login">Login</string>
    <string name="skip">Skip</string>
    <string name="intro_1">Have peace of mind\n\t\t\t\twith trusted people…</string>
    <string name="intro_2">The Smarter way to\n\t\t\t\tGet Work Done !</string>
    <string name="intro_3">Bring your dream to reality</string>
    <string name="intro_4">The Smarter way to\n\t\t\t\tGet Work Done !</string>
    <string name="create_account">Create Account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="agree_to_terms_conditions">Agree to Term\'s &amp; Conditions and Privacy Conditions</string>
    <string name="sign_up_with_email">Signup with Email</string>
    <string name="sign_up_with_fb">Signup with Facebook</string>
    <string name="or">Or Connect with</string>
    <string name="or_sign">Or Sign up with</string>
    <string name="already_a_member">Already a member??\u0020\u0020</string>
    <string name="already_have_account">ALREADY HAVE AN ACCOUNT?\u0020\u0020</string>
    <string name="sign_in">Sign In</string>
    <string name="success">SUCCESS</string>
    <string name="error">Error</string>
    <string name="password_mismatch">Passwords are not matching.</string>
    <string name="provide_valid_email">Please provide a valid Email.</string>
    <string name="email_does_not_exist">Email does not exist</string>
    <string name="provide_valid_password">Please provide a valid password.</string>
    <string name="provide_valid_verification_code">Please provide a valid verification code.</string>
    <string name="email_required">Please provide a valid Email.</string>
    <string name="password_required">Password required.</string>
    <string name="email_already_used">Email is already used.</string>
    <string name="tell_us_few_things">Tell us few things about you</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="company_name">Company Name</string>
    <string name="location">Location</string>
    <string name="phone_number">Phone Number</string>
    <string name="about_you">About You</string>
    <string name="next">Next</string>
    <string name="profile_image_required">Profile image required.</string>
    <string name="location_service_required">Location service is required</string>
    <string name="first_name_required">First name required.</string>
    <string name="last_name_required">Last name required.</string>
    <string name="company_name_required">Company name required.</string>
    <string name="location_required">Location required.</string>
    <string name="phone_no_required">Phone number required.</string>
    <string name="about_you_required">About you required.</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="dont_have_account">Don\'t have an account?\u0020\u0020</string>
    <string name="wrong_email_password">Wrong email or password, please try again.</string>
    <string name="fb">FACEBOOK</string>
    <string name="gg">GOOGLE</string>
    <string name="send_verification_code">Send Verification Code</string>
    <string name="reset_password">Reset Password</string>
    <string name="enter_verification_code">Enter Verification code sent via email</string>
    <string name="provide_verification_code">Please provide a verification code.</string>
    <string name="invalid_verification_code">Invalid verification code.</string>
    <string name="forgot_password_heading">Forgot Password</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="search_here">Search here</string>
    <string name="search_service">Search Services</string>
    <string name="by">By:\u0020</string>
    <string name="services">Services</string>
    <string name="live_offers">Live Offers</string>
    <string name="jobs">Jobs</string>
    <string name="job_detail">Job Detail</string>
    <string name="popular_categories">Popular Categories</string>
    <string name="enter_location">Enter Location</string>
    <string name="enter_new_address">Enter New Address</string>
    <string name="shipping_details">Shipping Details</string>
    <string name="see_all">See all</string>
    <string name="apply">Apply</string>
    <string name="enter_store_location">Enter Store Location</string>
    <string name="edit_store_location">Edit Store Location</string>
    <string name="enter_shipping_address">Enter New Adreess</string>
    <string name="edit_shipping_address">Edit Shipping Address</string>
    <string name="get_live_offer">Get Live Offer</string>
    <string name="post_update">Post Update</string>
    <string name="message">Message</string>
    <string name="write_here">Write here...</string>
    <string name="tag_a_service_or_seller">Tag a service or seller</string>
    <string name="enter_search_key">Please enter the search key</string>
    <string name="add_service">Add Service</string>
    <string name="choose_category">Choose Category</string>
    <string name="upload_photo_or_video">Upload photo or video</string>
    <string name="service_description">Service Description</string>
    <string name="pricing">Pricing</string>
    <string name="add_price_option">Add Price Option</string>
    <string name="your_local_services_wont_be_updated">Your local service will not be posted until you have passed background check</string>
    <string name="add">ADD</string>
    <string name="type_service_descn">Type your Service Description</string>
    <string name="price_option_description">Price Option Description</string>
    <string name="type_your_price_option_descn">Type your Price Option Description</string>
    <string name="type_your_offer_descn">Type your Offer Description</string>
    <string name="time_to_complete">Time to complete after job starts</string>
    <string name="add_price_option_header">Add Price Option</string>
    <string name="edit_price_option_header">Edit Price Option</string>
    <string name="update">Updates</string>
    <string name="explore">Explore</string>
    <string name="post">Post</string>
    <string name="chat">Chat</string>
    <string name="me">Me</string>
    <string name="first_name_edit">First Name</string>
    <string name="last_name_edit">Last Name</string>
    <string name="company">Company</string>
    <string name="about_me">About Me</string>
    <string name="education">Education</string>
    <string name="insurance">Insurance</string>
    <string name="license">Licence</string>
    <string name="awards">Awards</string>
    <string name="phone">Phone</string>
    <string name="location_edit">Location</string>
    <string name="save">Save</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="coose_img_text">Upload Profile background images \nor videos</string>
    <string name="coose_img_text_without_profile">Upload images or videos</string>
    <string name="notification_option">Notification Option</string>
    <string name="email_status">Email Status</string>
    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>
    <string name="set_prefreances_below_on_how">Set preferences below on how you want to receive notifications</string>
    <string name="push">Push</string>
    <string name="you_want_to_recive_notification">you want to receive notifications</string>
    <string name="email_small">Email</string>
    <string name="user_settings">User Settings</string>
    <string name="set_your_privacy">Set your privacy settings below</string>
    <string name="who_can_view_my_location">Who can view my location</string>
    <string name="who_can_view_my_phone">Who can view my phone number</string>
    <string name="txt_public">Public</string>
    <string name="only_me">Only Me</string>
    <string name="no_internet_warning">Please check your internet connection</string>
    <string name="wrong_password_msg">Authentication failed. Wrong password.</string>
    <string name="wrong_email_msg">Authentication failed. User not found.</string>
    <string name="menu_header">Account</string>
    <string name="account">Account</string>
    <string name="order">Orders</string>
    <string name="offers_sent">Offers Sent</string>
    <string name="job_oppotunities">Job Opportunities</string>
    <string name="premium_membership">Premium Membership</string>
    <string name="background_check">Background Check</string>
    <string name="business_verification">Business Verification</string>
    <string name="edt_store_location">Edit Store Locations</string>
    <string name="store_location">Store Locations</string>
    <string name="transactions_history">Transactions History</string>
    <string name="edt_profile">Edit Profile</string>
    <string name="notification_settings">Notification Settings</string>
    <string name="edit_user_settings">Edit User Settings</string>
    <string name="paymemt_method">Payment Methods</string>
    <string name="shipping_addresses">Shipping Addresses</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="watching">Watching</string>
    <string name="invite_frnd">Invite Friends"</string>
    <string name="leave_feedback">Leave Feedback</string>
    <string name="first_name_small">First Name</string>
    <string name="middle_name">Middle Name</string>
    <string name="last_name_small">Last Name</string>
    <string name="social_security_no">Social Security Number</string>
    <string name="postal_code">Postal code</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="driver_license_no">Driver License Number</string>
    <string name="driver_license_state">Driver License State</string>
    <string name="submit">Submit</string>
    <string name="terms_header">Please read the following Terms and Conditions, they govern our business relationship. When you access and use our website, app, or services, you acknowledge and agree to all of these conditions.</string>
    <string name="terms_sub_1">1. Terms</string>
    <string name="terms_sub_2">2. Privacy</string>
    <string name="terms_detail_1">These terms are legally binding. If you are under the age of eighteen (18) you may not access or use our website without consent of a legal guardian or parent. You are also restricted from accessing or using our website, app, or services, where it is prohibited, or where there is conflict between this agreement and local rules as well as regulations in your home jurisdiction. When you use or access our website, app, or services, you automatically agree to all of these terms as well as policies, and amendments to this agreement.</string>
    <string name="terms_detail_2">Please review our Privacy Policy</string>
</resources>