<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:ignore="MissingPrefix">

    <android.support.constraint.Guideline
        android:id="@+id/constraint_guide_center"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <android.support.v4.view.ViewPager
        android:id="@+id/view_pager_intro"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/constraint_guide_center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_22sdp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                fontPath="fonts/Montserrat-Regular.ttf"
                android:id="@+id/txt_welcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_6sdp"
                android:text="@string/welcome"
                android:textColor="#030204"
                android:textSize="@dimen/text_size_huge"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/txt_intro"/>

            <TextView
                fontPath="fonts/Montserrat-Light.ttf"
                android:id="@+id/txt_intro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_24sdp"
                android:gravity="center"
                android:text="@string/app_intro"
                android:textColor="#030204"
                android:textSize="@dimen/text_size_medium"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/btn_sign_up"  />

            <TextView
                android:id="@+id/btn_sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_16sdp"
                android:background="@drawable/bg_intro_sign_up"
                android:paddingBottom="@dimen/_11sdp"
                android:paddingLeft="@dimen/_40sdp"
                android:paddingRight="@dimen/_40sdp"
                android:paddingTop="@dimen/_11sdp"
                android:text="@string/sign_up"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/text_size_small"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/btn_email_login"
                app:layout_constraintBottom_toTopOf="@+id/txt_skip" />

            <TextView
                android:id="@+id/btn_email_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_16sdp"
                android:background="@drawable/bg_intro_login"
                android:paddingBottom="@dimen/_11sdp"
                android:paddingLeft="@dimen/_40sdp"
                android:paddingRight="@dimen/_40sdp"
                android:paddingTop="@dimen/_11sdp"
                android:text="@string/login"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size_small"
                app:layout_constraintLeft_toRightOf="@+id/btn_sign_up"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/txt_skip" />

            <TextView
                android:id="@+id/txt_skip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12sdp"
                android:background="?attr/selectableItemBackground"
                android:padding="@dimen/_3sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:text="@string/skip"
                android:textSize="@dimen/text_size_medium"
                android:textColor="@color/colorAccent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/indicator_view_pager" />
            <com.viewpagerindicator.CirclePageIndicator
                android:id="@+id/indicator_view_pager"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:theme="@style/CustomCirclePageIndicator" />


        </android.support.constraint.ConstraintLayout>
    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>
